--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ h6,
     font-weight: 900;
     vertical-align: middle;
     margin-left: 8px;
-    color: transparent!important;
+    color: #9E9E9E;
 }
 
 .navbar .navbar-nav .nav-link {
@@ -154,6 +154,25 @@ h6,
   color: #9E9E9E;
   font-size: 18px;
 
+}
+
+.navbar .dropdown-menu {
+  position: absolute;
+  z-index: 1000;
+  display: none;
+  min-width: 10rem;
+  /* padding: .5rem 0; */
+  margin: 0;
+  font-size: 1rem;
+  color: #777;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0px;
+  text-transform: uppercase;
+  transform: translate(0px, 0px) !important;
 }
 
 .navbar .navbar-nav .nav-link:hover,
@@ -722,6 +741,10 @@ h6,
   .navmenu .active,
   .navmenu .active:focus {
     color: #63BEBF;
+  }
+
+  .navmenu .dropdown-menu {
+    transform: translate(0px, 46px) !important;
   }
 
   .navmenu .dropdown ul {
@@ -1476,6 +1499,25 @@ section,
     width: 100%;
     height: 100%;
     object-fit: cover;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.why-img1 {
+  position: relative;
+  height: 100%;
+  /* min-height: 300px; */
+  display: flex;
+  align-items: center;
+  padding: 100px;
+}
+
+
+.why-img1 img {
+  position: absolute;
+  width: 95%;
+  height: 90%;
+  object-fit: cover;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 /*** services  ***/
