--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,40 @@ h6,
     .header-carousel .owl-carousel-item p {
         font-size: 16px !important;
     }
+
+    /*** why  ***/
+
+    .why-img {
+      position: relative;
+      height: 100%;
+      min-height: 400px;
+    }
+
+
+    .why-img img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .why-img1 {
+      position: relative;
+      height: 100%;
+      min-height: 300px;
+      display: flex;
+      align-items: center;
+      padding: 0px;
+    }
+
+    .why-img1 img {
+      position: absolute;
+      width: 95%;
+      height: 90%;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
 }
 
 .header-carousel .owl-dots {
@@ -814,11 +848,7 @@ h6,
     
   }
    
-
-
 }
-
-
 
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
@@ -1435,7 +1465,8 @@ section,
 .details img {
     background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    width: 70% !important
+    width: 70% !important;
+    margin-left:70px;
 }
 
 @media (max-width: 992px) {
@@ -1508,7 +1539,7 @@ section,
   /* min-height: 300px; */
   display: flex;
   align-items: center;
-  padding: 100px;
+  padding: 0px;
 }
 
 
@@ -1611,4 +1642,22 @@ section,
 .header.scrolled #navbar-logo {
   /* optional: adjust size when scrolled */
   max-height: 40px;
+}
+
+/*** newsletter  ***/
+.newsletter_form .validation {
+  font-size: 16px;
+  color: #abaaaa;
+  margin-bottom: 10px !important;
+
+}
+
+.newsletter_form input::placeholder {
+  font-size: 13px;
+  color: #919191;
+}
+
+.newsletter_form input::placeholder {
+  font-size: 16px;
+  color: #919191;
 }
