--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,8 @@ h6,
         transition: .5s;
         opacity: 1;
     }
+
+
 }
 
 
@@ -244,6 +246,7 @@ h6,
     .header-carousel .owl-carousel-item p {
         font-size: 16px !important;
     }
+  
 
     /*** why  ***/
 
@@ -251,8 +254,9 @@ h6,
       position: relative;
       height: 100%;
       min-height: 400px;
+      width: 350px;
+    
     }
-
 
     .why-img img {
       position: absolute;
@@ -275,8 +279,79 @@ h6,
       position: absolute;
       width: 95%;
       height: 90%;
-      object-fit: cover;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    /*** details  ***/
+    .details p {
+      margin-bottom: 20px;
+      font-size: 18px!important;
+    }
+
+   .details .details img{
+        background-color: #ffffff;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        width: 100% !important;
+        margin-left:0px;
+    }
+
+   /*** hero  ***/
+ 
+     /*.hero .bg-img {
+      background: url(../img/hero/banner-mobile.jpg)!important;
+      background-size: cover;
+    }*/
+
+
+    .hero {
+      width: 100%;
+      min-height: 80vh!important;
+      position: relative;
+      padding: 120px 0 60px;
+      display: flex;
+      align-items: center;
+    }
+    
+    .hero img {
+      position: absolute;
+      inset: 0;
+      display: block;
+      width: 100%;
+      height: 100%!important;
+      object-fit: unset!important;
+      z-index: 1;
+    }
+
+
+    .hero p {
+      margin: 10px 0;
+      font-size: 20px!important;
+      color: var(--heading-color);
+      font-style: italic;
+    }
+
+    .hero blockquote h3 {
+      margin: 0px 0;
+      font-size: 36px;
+      color: var(--heading-color);
+      font-style: italic;
+    }
+
+    /*** call to action  ***/
+    .call-to-action p {
+      color: var(--default-color);
+      font-size: 18px!important;
+    }
+
+    /*** footer  ***/
+    .footer .container {
+      text-align: center!important;
+    }
+
+    .footer .footer-links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -854,13 +929,26 @@ h6,
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
     color: var(--nav-color);
-    font-size: 28px;
+    font-size: 30px;
     line-height: 0;
     margin-right: 10px;
     cursor: pointer;
     transition: color 0.3s;
+    border-color: var(--nav-color);
+    border-style: solid;
+    padding: .10rem .50rem;
+    border: 1px solid;
   }
 
+  .navmenu .navbar.dropdown-toggle::after {
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    vertical-align: middle;
+    margin-left: 8px;
+    color: #9E9E9E;
+  }
   .navmenu {
     padding: 0;
     z-index: 9997;
@@ -988,6 +1076,15 @@ h6,
 
   .mobile-nav-active .navmenu>ul {
     display: block;
+  }
+
+
+  .mobile-nav-active .navmenu .dropdown-menu {
+    transform: translate(0px, 6px) !important;
+  } 
+
+  .mobile-nav-active .navmenu ul{ 
+    height: 300px!important;
   }
   
 
@@ -1144,6 +1241,11 @@ section,
   object-fit: cover;
   z-index: 1;
 }
+
+/*.hero img { 
+  background-image: url(../img/hero/banner.jpg);
+  position: absolute;
+}*/
 
 .hero .container,
 .hero .container-fluid {
